[gd_scene load_steps=61 format=3 uid="uid://bxdqxtly7rl7k"]

[ext_resource type="Script" uid="uid://b3pni8mnc8um3" path="res://character_body_2d.gd" id="1_el80s"]
[ext_resource type="Texture2D" uid="uid://8vv2js5ouyyi" path="res://sprites/diamantdreamer/diamantidle1.png" id="2_oxcm1"]
[ext_resource type="Texture2D" uid="uid://cqi8epmlwi8r8" path="res://sprites/diamantdreamer/diamantidle2.png" id="3_ltww1"]
[ext_resource type="Texture2D" uid="uid://b6t2vjqor1itq" path="res://sprites/diamantdreamer/diamantidle3.png" id="4_a7mna"]
[ext_resource type="Texture2D" uid="uid://cc05nixfgno4w" path="res://sprites/diamantdreamer/diamantidle4.png" id="5_lmwkj"]
[ext_resource type="Texture2D" uid="uid://ogb8lciodw2v" path="res://sprites/diamantdreamer/diamantdown.png" id="6_k3r5w"]
[ext_resource type="Texture2D" uid="uid://c1qyap7xnji5n" path="res://sprites/diamantdreamer/diamantjumpidle.png" id="7_1rslu"]
[ext_resource type="Texture2D" uid="uid://cv02krvuhyh07" path="res://sprites/diamantdreamer/diamantjumpup.png" id="8_3uyxa"]
[ext_resource type="Texture2D" uid="uid://bw2jtywgjces2" path="res://sprites/diamantdreamer/diamantcombo1 (1).png" id="9_6svqw"]
[ext_resource type="Texture2D" uid="uid://b2uwx555y07di" path="res://sprites/diamantdreamer/diamantcombo1 (2).png" id="10_j3p37"]
[ext_resource type="Texture2D" uid="uid://d07bkwsx8i7jd" path="res://sprites/diamantdreamer/diamantcombo1 (3).png" id="11_j6lyf"]
[ext_resource type="Texture2D" uid="uid://dql6qj8brr1mu" path="res://sprites/diamantdreamer/diamantcombo1 (4).png" id="12_j2xv7"]
[ext_resource type="Texture2D" uid="uid://br1r0jr5ievld" path="res://sprites/diamantdreamer/diamantcombo1 (5).png" id="13_130kv"]
[ext_resource type="Texture2D" uid="uid://dho6im1xmta7s" path="res://sprites/diamantdreamer/diamantcombo1 (6).png" id="14_d1cqh"]
[ext_resource type="Texture2D" uid="uid://ccfbwuqfriud5" path="res://sprites/diamantdreamer/diamantgettingblock1.png" id="15_61y8d"]
[ext_resource type="Texture2D" uid="uid://b80jh2xqkpa78" path="res://sprites/diamantdreamer/diamantcombo1 (7).png" id="15_a340w"]
[ext_resource type="Texture2D" uid="uid://cy43dioig62ae" path="res://sprites/diamantdreamer/diamantreload1.png" id="15_mbxdm"]
[ext_resource type="Texture2D" uid="uid://svs1ecwec0r" path="res://sprites/diamantdreamer/diamantgettingblock2.png" id="16_8icv6"]
[ext_resource type="Texture2D" uid="uid://d06v3srj35y0w" path="res://sprites/diamantdreamer/diamantcombo1 (8).png" id="16_nw78w"]
[ext_resource type="Texture2D" uid="uid://bd3eef4op1b7m" path="res://sprites/diamantdreamer/diamantreload2.png" id="16_rk7dk"]
[ext_resource type="Texture2D" uid="uid://bnqyj4cakcox8" path="res://sprites/diamantdreamer/diamantcombo1 (9).png" id="17_dpyh0"]
[ext_resource type="Texture2D" uid="uid://bq05if238g2y2" path="res://sprites/diamantdreamer/diamantblock1.png" id="17_mwn6v"]
[ext_resource type="Texture2D" uid="uid://be1k4sb7egkg6" path="res://sprites/diamantdreamer/diamantreload3.png" id="17_uafw2"]
[ext_resource type="Texture2D" uid="uid://cbafr886mwfy5" path="res://sprites/diamantdreamer/diamantreload4.png" id="18_76puf"]
[ext_resource type="Texture2D" uid="uid://ik7hpsmbbfv5" path="res://sprites/diamantdreamer/diamantcombo1 (10).png" id="18_gmgjv"]
[ext_resource type="Texture2D" uid="uid://dsw670lnri48b" path="res://sprites/diamantdreamer/diamantblock2p.png" id="18_ms8fj"]
[ext_resource type="Texture2D" uid="uid://big7q6hufk4qn" path="res://sprites/diamantdreamer/diamantcombo1 (11).png" id="19_1c55x"]
[ext_resource type="Texture2D" uid="uid://icdbv22n4dop" path="res://sprites/diamantdreamer/diamantblock3p.png" id="19_unmcv"]
[ext_resource type="Texture2D" uid="uid://m00iwjxdm8op" path="res://sprites/diamantdreamer/diamantreload5.png" id="19_wd4sy"]
[ext_resource type="Texture2D" uid="uid://ch7dfekaak8rc" path="res://sprites/diamantdreamer/diamantblock4.png" id="20_gh552"]
[ext_resource type="Texture2D" uid="uid://brkka5yre6i7y" path="res://sprites/diamantdreamer/diamantrevolvshoot2.png" id="20_nqd4t"]
[ext_resource type="Texture2D" uid="uid://bo4y3m0upyys5" path="res://sprites/diamantdreamer/diamantcombo1 (12).png" id="20_x6jt5"]
[ext_resource type="Texture2D" uid="uid://d3qam26mqd0gm" path="res://sprites/diamantdreamer/diamantblock5.png" id="21_mbxdm"]
[ext_resource type="Texture2D" uid="uid://diq35rcx2yd47" path="res://sprites/diamantdreamer/diamantrevolvshoot3.png" id="21_tqjdw"]
[ext_resource type="Texture2D" uid="uid://6wjt2yvecxql" path="res://sprites/diamantdreamer/diamantcombo1 (13).png" id="21_v7lqg"]
[ext_resource type="Texture2D" uid="uid://bb51o12m1d4t4" path="res://sprites/diamantdreamer/diamantcombo1 (14).png" id="22_jqvwn"]
[ext_resource type="Texture2D" uid="uid://cem5v10i3ktgb" path="res://sprites/diamantdreamer/diamantrevolvshoot4.png" id="22_naw67"]
[ext_resource type="Texture2D" uid="uid://crb35x5asaebg" path="res://sprites/diamantdreamer/diamantrevolv.png" id="22_rk7dk"]
[ext_resource type="Texture2D" uid="uid://c0fkon7dnn1cm" path="res://sprites/diamantdreamer/diamantrevolvshoot5.png" id="23_fhkdx"]
[ext_resource type="Texture2D" uid="uid://dsjkxhgfhuec5" path="res://sprites/diamantdreamer/diamantcombo1 (15).png" id="23_rwhj8"]
[ext_resource type="Texture2D" uid="uid://q5fvs1odqvht" path="res://sprites/diamantdreamer/diamantcombo1 (16).png" id="24_6jp41"]
[ext_resource type="Texture2D" uid="uid://u5trs1nctit3" path="res://sprites/diamantdreamer/diamantrevolvshoot6.png" id="24_c4j0v"]
[ext_resource type="Texture2D" uid="uid://b4n3a214e2mnw" path="res://sprites/diamantdreamer/diamantrevolvshoot.png" id="25_1hg8c"]
[ext_resource type="Texture2D" uid="uid://d4km00phdfvg3" path="res://sprites/diamantdreamer/diamantcombo1 (17).png" id="25_d0it7"]
[ext_resource type="Texture2D" uid="uid://bleyi1xdd5bbr" path="res://sprites/diamantdreamer/diamantcombo1 (18).png" id="26_u71ia"]
[ext_resource type="Texture2D" uid="uid://dphdatm8rqa3c" path="res://sprites/diamantdreamer/diamantrun1.png" id="26_uw63b"]
[ext_resource type="Texture2D" uid="uid://bimek5g0m17ue" path="res://sprites/diamantdreamer/diamantrun2.png" id="27_05yte"]
[ext_resource type="Texture2D" uid="uid://p1khl0hajybr" path="res://sprites/diamantdreamer/diamantcombo1 (19).png" id="27_73aya"]
[ext_resource type="Texture2D" uid="uid://clscn71djuayc" path="res://sprites/diamantdreamer/diamantupattack1.png" id="28_l0yec"]
[ext_resource type="Texture2D" uid="uid://hevlmvs31mqp" path="res://sprites/diamantdreamer/diamantrun3.png" id="28_xkkvp"]
[ext_resource type="Texture2D" uid="uid://cyxjqs62j3fmh" path="res://sprites/diamantdreamer/diamantrun4.png" id="29_6svqw"]
[ext_resource type="Texture2D" uid="uid://gvaw5txj26ok" path="res://sprites/diamantdreamer/diamantupattack2.png" id="29_ntjw6"]
[ext_resource type="Texture2D" uid="uid://cwr2nwr18thq6" path="res://sprites/diamantdreamer/diamantupattack3.png" id="30_b3etl"]
[ext_resource type="Texture2D" uid="uid://cv5iy8ebiv1pf" path="res://sprites/diamantdreamer/diamantupattack4.png" id="31_qaysv"]
[ext_resource type="Texture2D" uid="uid://dqdj8r04o6gfy" path="res://sprites/diamantdreamer/diamantupattack5.png" id="32_sgnu4"]
[ext_resource type="Texture2D" uid="uid://danwy8gmkr6f4" path="res://sprites/diamantdreamer/diamantupattack6.png" id="33_6nu6j"]
[ext_resource type="Texture2D" uid="uid://g140oq6fmkp8" path="res://sprites/diamantdreamer/diamantupattack7.png" id="34_c1asr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3p37"]
size = Vector2(25, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_j6lyf"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_oxcm1")
}, {
"duration": 1.0,
"texture": ExtResource("3_ltww1")
}, {
"duration": 1.0,
"texture": ExtResource("4_a7mna")
}, {
"duration": 1.0,
"texture": ExtResource("5_lmwkj")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_k3r5w")
}],
"loop": true,
"name": &"jump_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_1rslu")
}],
"loop": true,
"name": &"jump_stable",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3uyxa")
}],
"loop": true,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_6svqw")
}, {
"duration": 1.0,
"texture": ExtResource("10_j3p37")
}, {
"duration": 1.0,
"texture": ExtResource("11_j6lyf")
}, {
"duration": 1.0,
"texture": ExtResource("12_j2xv7")
}, {
"duration": 1.0,
"texture": ExtResource("13_130kv")
}, {
"duration": 1.0,
"texture": ExtResource("14_d1cqh")
}, {
"duration": 1.0,
"texture": ExtResource("15_a340w")
}, {
"duration": 1.0,
"texture": ExtResource("16_nw78w")
}, {
"duration": 1.0,
"texture": ExtResource("17_dpyh0")
}, {
"duration": 1.0,
"texture": ExtResource("18_gmgjv")
}, {
"duration": 1.0,
"texture": ExtResource("19_1c55x")
}, {
"duration": 1.0,
"texture": ExtResource("20_x6jt5")
}, {
"duration": 0.2,
"texture": ExtResource("21_v7lqg")
}, {
"duration": 0.2,
"texture": ExtResource("22_jqvwn")
}, {
"duration": 0.5,
"texture": ExtResource("23_rwhj8")
}, {
"duration": 1.0,
"texture": ExtResource("24_6jp41")
}, {
"duration": 1.0,
"texture": ExtResource("25_d0it7")
}, {
"duration": 1.0,
"texture": ExtResource("26_u71ia")
}, {
"duration": 1.0,
"texture": ExtResource("27_73aya")
}],
"loop": true,
"name": &"kick_ground",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_l0yec")
}, {
"duration": 1.0,
"texture": ExtResource("29_ntjw6")
}, {
"duration": 1.0,
"texture": ExtResource("30_b3etl")
}, {
"duration": 1.0,
"texture": ExtResource("31_qaysv")
}, {
"duration": 1.0,
"texture": ExtResource("32_sgnu4")
}, {
"duration": 1.0,
"texture": ExtResource("33_6nu6j")
}, {
"duration": 1.0,
"texture": ExtResource("34_c1asr")
}],
"loop": false,
"name": &"kick_up",
"speed": 15.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("15_61y8d")
}, {
"duration": 1.0,
"texture": ExtResource("16_8icv6")
}, {
"duration": 1.0,
"texture": ExtResource("17_mwn6v")
}, {
"duration": 1.0,
"texture": ExtResource("18_ms8fj")
}, {
"duration": 1.0,
"texture": ExtResource("19_unmcv")
}, {
"duration": 1.0,
"texture": ExtResource("20_gh552")
}, {
"duration": 5.0,
"texture": ExtResource("21_mbxdm")
}],
"loop": true,
"name": &"parry",
"speed": 20.0
}, {
"frames": [{
"duration": 5.0,
"texture": ExtResource("22_rk7dk")
}, {
"duration": 2.0,
"texture": ExtResource("15_mbxdm")
}, {
"duration": 1.0,
"texture": ExtResource("16_rk7dk")
}, {
"duration": 1.0,
"texture": ExtResource("17_uafw2")
}, {
"duration": 1.0,
"texture": ExtResource("18_76puf")
}, {
"duration": 1.0,
"texture": ExtResource("19_wd4sy")
}],
"loop": true,
"name": &"reload",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_nqd4t")
}, {
"duration": 1.0,
"texture": ExtResource("21_tqjdw")
}, {
"duration": 1.0,
"texture": ExtResource("22_naw67")
}, {
"duration": 1.0,
"texture": ExtResource("23_fhkdx")
}, {
"duration": 1.0,
"texture": ExtResource("24_c4j0v")
}, {
"duration": 1.0,
"texture": ExtResource("25_1hg8c")
}],
"loop": true,
"name": &"revshoot",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_uw63b")
}, {
"duration": 1.0,
"texture": ExtResource("27_05yte")
}, {
"duration": 1.0,
"texture": ExtResource("28_xkkvp")
}, {
"duration": 1.0,
"texture": ExtResource("29_6svqw")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_el80s"]
size = Vector2(46, 49)

[node name="player" type="CharacterBody2D"]
position = Vector2(267, 253)
script = ExtResource("1_el80s")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(-7, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 36.5)
shape = SubResource("RectangleShape2D_j3p37")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-5, 33)
sprite_frames = SubResource("SpriteFrames_j6lyf")
animation = &"kick_ground"
frame_progress = 0.240522

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-8, -14)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
drag_left_margin = 1.0
drag_top_margin = 1.0
drag_right_margin = 1.0
drag_bottom_margin = 1.0

[node name="attack_hold_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-7, 35)
rotation = 3.14159
scale = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18, 0)
shape = SubResource("RectangleShape2D_el80s")
disabled = true

[node name="KnockbackTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attack_hold_timer" to="." method="_on_attack_hold_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
