extends CharacterBody2D

var run_speed = 350
var jump_speed = -700
var gravity = 1000
var is_attacking = false
var attack_cooldown = false
var attack_timer : Timer
var attack_hold_timer :Timer
var attack_velocity_jump = -700
var is_holding = false
var is_holding_attack = false


func _ready():
	# –°–æ–∑–¥–∞–µ–º —Ç–∞–π–º–µ—Ä –¥–ª—è –∞—Ç–∞–∫–∏
	attack_timer = $Timer
	attack_hold_timer = $attack_hold_timer
	attack_timer.one_shot = true
	



func get_input():
	velocity.x = 0
	
	# –ï—Å–ª–∏ —É–∂–µ –∞—Ç–∞–∫—É–µ–º, –æ–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ
	if is_attacking:
		var right = Input.is_action_pressed('right')
		var left = Input.is_action_pressed('left')
		
		if right:
			$AnimatedSprite2D.flip_h = false
			velocity.x += run_speed * 0.5
		elif left:
			$AnimatedSprite2D.flip_h = true
			velocity.x -= run_speed * 0.5
		return  # –í—ã—Ö–æ–¥–∏–º, —á—Ç–æ–±—ã –Ω–µ –º–µ—à–∞—Ç—å –∞–Ω–∏–º–∞—Ü–∏–∏ –∞—Ç–∞–∫–∏
	
	# –î–≤–∏–∂–µ–Ω–∏–µ –∏ –ø—Ä—ã–∂–∫–∏ (–æ—Å—Ç–∞–≤–ª—è–µ–º –±–µ–∑ –∏–∑–º–µ–Ω–µ–Ω–∏–π)
	var right = Input.is_action_pressed('right')
	var left = Input.is_action_pressed('left')
	var jump = Input.is_action_just_pressed('ui_select')
	
	if is_on_floor() and jump:
		$AnimatedSprite2D.play("jump_up")
		velocity.y = jump_speed
	
	if is_on_floor():
		if right:
			$AnimatedSprite2D.flip_h = false
			velocity.x += run_speed
		elif left:
			$AnimatedSprite2D.flip_h = true
			velocity.x -= run_speed
	
	if !is_on_floor():
		if velocity.y < 0:
			$AnimatedSprite2D.play("jump_up")
		else:
			$AnimatedSprite2D.play("jump_down")
		if right:
			velocity.x += run_speed
		elif left:
			velocity.x -= run_speed
	elif velocity.x == 0:
		$AnimatedSprite2D.play("idle")
	else:
		$AnimatedSprite2D.play("run")

	# üî• –ù–û–í–ê–Ø –õ–û–ì–ò–ö–ê –ê–¢–ê–ö–ò (–∏—Å–ø—Ä–∞–≤–ª–µ–Ω–Ω–∞—è)
	if Input.is_action_just_pressed("Attack") and not attack_cooldown:
		# –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–∞–π–º–µ—Ä —É–¥–µ—Ä–∂–∞–Ω–∏—è (0.3 —Å–µ–∫)
		is_holding_attack = false
		attack_hold_timer.start(0.3)
	
	# –ï—Å–ª–∏ –∏–≥—Ä–æ–∫ –æ—Ç–ø—É—Å—Ç–∏–ª –∫–Ω–æ–ø–∫—É –î–û –∏—Å—Ç–µ—á–µ–Ω–∏—è —Ç–∞–π–º–µ—Ä–∞ ‚Üí –±—ã—Å—Ç—Ä–∞—è –∞—Ç–∞–∫–∞
	if Input.is_action_just_released("Attack") and attack_hold_timer.time_left > 0:
		if not is_holding_attack and not attack_cooldown:
			start_quick_attack()
			attack_hold_timer.stop()  # –û—Ç–º–µ–Ω—è–µ–º —Ç–∞–π–º–µ—Ä —É–¥–µ—Ä–∂–∞–Ω–∏—è

func start_quick_attack():
	is_attacking = true
	attack_cooldown = true
	$AnimatedSprite2D.play("kick_ground")
	
	var anim_speed = $AnimatedSprite2D.sprite_frames.get_animation_speed("kick_ground")
	var frame_count = $AnimatedSprite2D.sprite_frames.get_frame_count("kick_ground")
	var anim_length = frame_count / anim_speed
	attack_timer.start(anim_length)

func _physics_process(delta):
	# –ì—Ä–∞–≤–∏—Ç–∞—Ü–∏—è —Ä–∞–±–æ—Ç–∞–µ—Ç –≤—Å–µ–≥–¥–∞
	velocity.y += gravity * delta
	
	# –û–±—Ä–∞–±–æ—Ç–∫–∞ –≤–≤–æ–¥–∞
	get_input()
	
	move_and_slide()


func _on_timer_timeout() -> void:
	
	is_attacking = false
	attack_cooldown = false


func _on_attack_hold_timer_timeout():
	if Input.is_action_pressed("Attack"):  # –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ –∫–Ω–æ–ø–∫–∞ –≤—Å—ë –µ—â—ë –∑–∞–∂–∞—Ç–∞
		is_holding_attack = true
		# –ó–∞–ø—É—Å–∫–∞–µ–º —Å–∏–ª—å–Ω—É—é –∞—Ç–∞–∫—É
		velocity.x = -attack_velocity_jump if $AnimatedSprite2D.flip_h else attack_velocity_jump
		velocity.y = attack_velocity_jump
		is_attacking = true
		attack_cooldown = true
		$AnimatedSprite2D.play("kick_up")  
		attack_timer.start(0.75)
